[tool.poetry]
name = "learn-data-engineering"
version = "0.1.0"
description = "Learn Data Engineering"
authors = ["hashfunc <hashfunc.io@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"

pandas = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]

[tool.isort]
py_version = 311
profile = "black"
include_trailing_comma = true

[tool.mypy]
python_version = "3.11"
strict = true
